--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 @import "tailwindcss";
 
 @font-face {
@@ -7,9 +8,8 @@
     font-style: normal;
 }
 
-
 :root {
-    --font-primary: "RF Dewi", sans-serif;
+    --font-primary: "Poppins", sans-serif;
 }
 
 @keyframes slide-infinite {
