--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 @import "tailwindcss";
 
-@font-face {
-    font-family: "RF Dewi";
-    src: url("./assets/fonts/RFDewi-Regular.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
-
 :root {
     --font-primary: "Poppins", sans-serif;
+}
+
+body {
+    font-family: var(--font-primary);
 }
 
 @keyframes slide-infinite {
